--- a/ttsx_xm/templates/search/search.html
+++ b/ttsx_xm/templates/search/search.html
@@ -1,49 +1,12 @@
 
-{% extends 'base.html' %}
+{% extends 'Goods/base_search.html' %}
 {% block title %}
     <title>天天生鲜-商品列表</title>
 {% endblock title %}
 {% block head %}
 <script src="/static/js/list.js"></script>
 {% endblock head %}
-{% block body %}
-
-    <div class="search_bar clearfix">
-		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
-		<div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
-            <div class="goods_count fl">0</div>
-		</div>
-	</div>
-
-	<div class="navbar_con">
-		<div class="navbar clearfix">
-			<div class="subnav_con fl">
-				<h1>全部商品分类</h1>
-				<span></span>
-				<ul class="subnav">
-{#                    list后面第一个数字为商品type，第二个为排序方法，第三个为页码#}
-					<li><a href="/Goods/list1_0_1" class="fruit">新鲜水果</a></li>
-					<li><a href="/Goods/list2_0_1" class="seafood">海鲜水产</a></li>
-					<li><a href="/Goods/list3_0_1" class="meet">猪牛羊肉</a></li>
-					<li><a href="/Goods/list4_0_1" class="egg">禽类蛋品</a></li>
-					<li><a href="/Goods/list5_0_1" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="/Goods/list6_0_1" class="ice">速冻食品</a></li>
-				</ul>
-			</div>
-			<ul class="navlist fl">
-				<li><a href="/">首页</a></li>
-				<li class="interval">|</li>
-				<li><a href="">手机生鲜</a></li>
-				<li class="interval">|</li>
-				<li><a href="">抽奖</a></li>
-			</ul>
-		</div>
-	</div>
+{% block bodynext %}
 
 	<div class="breadcrumb">
 		<a href="#">全部分类</a>
@@ -92,4 +55,4 @@
         <img src="/static/images/goods/goods001.jpg" style="width: auto;height: auto;max-width: 100%;max-height: 100%">
 
 	</div>
-{% endblock body %}
+{% endblock bodynext %}
