--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -779,14 +779,6 @@ label{
 	color: #404040;
 	z-index: 999;
 }
-.tishi{
-	width: 300px;
-	height: 30px;
-	background-color: darkcyan;
-	color: silver;
-	border: 0;
-	display: none;
-}
 /*去除下拉框的三角*/
 select{
 appearance:none;
@@ -830,9 +822,9 @@ appearance:none;
 	font-family:'Microsoft Yahei'
 }
 
-.text{
+.forget_text{
 	width: 400px;
-	height: 200px;
+	height: 100px;
 	margin: auto;
 	margin-top: 50px;
 }
