--- a/ttsx_xm/templates/Cart/cart.html
+++ b/ttsx_xm/templates/Cart/cart.html
@@ -8,10 +8,6 @@
         $(function () {
 
             jisuan();
-{#            $('.check_all input').click(jisuan);#}
-{#            $('.col01 input').click(jisuan);#}
-            $(':checkbox:not(#check_all)').click(jisuan);
-            $('#check_all').click(jisuan);
             function jisuan() {
     {#                计算价格#}
                 total1=0;
@@ -100,6 +96,7 @@
             $('#check_all').click(function () {
                 state=$(this).prop('checked');
                 $(':checkbox:not(#check_all)').prop('checked',state)
+                jisuan();
             });
 
 {#            单个勾选#}
@@ -113,6 +110,7 @@
                 else{
                     $('#check_all').prop('checked',false);
                 }
+                jisuan();
             });
 
 {#            点击删除#}
@@ -157,7 +155,7 @@
                 <li class="col02"><img src="/static/images/{{ cart.goods.gpic }}"></li>
                 <li class="col03">{{ cart.goods.gtitle }}<br><em>{{ cart.goods.gprice }}/500g</em></li>
                 <li class="col04">500g</li>
-                <li class="col05">{{ cart.goods.gprice }}元</li>
+                <li class="col05"><em>{{ cart.goods.gprice }}元</em></li>
                 <li class="col06">
                 {#            商品数量#}
 
@@ -167,7 +165,7 @@
                         <a href="javascript:;" class="minus fl">-</a>
                     </div>
                 </li>
-                <li class="col07">元</li>
+                <li class="col07"><em>元</em></li>
                 <li class="col08"><a href="javascript:;">删除</a></li>
             </ul>
 
@@ -180,71 +178,5 @@
                 <li class="col04"><input type="submit" name="" value="去结算"></li>
             </ul>
         </form>
-    {% block body %}
-        <div class="header_con">
-            <div class="header">
-                <div class="welcome fl">欢迎来到天天生鲜!</div>
-            </div>
-        </div>
-
-        <div class="search_bar clearfix">
-            <a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-            <div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
-            <div class="search_con fr">
-                <input type="text" class="input_text fl" name="" placeholder="搜索商品">
-                <input type="button" class="input_btn fr" name="" value="搜索">
-            </div>
-        </div>
-
-        <div class="total_count">全部商品<em>2</em>件</div>
-        <ul class="cart_list_th clearfix">
-            <li class="col01">商品名称</li>
-            <li class="col02">商品单位</li>
-            <li class="col03">商品价格</li>
-            <li class="col04">数量</li>
-            <li class="col05">小计</li>
-            <li class="col06">操作</li>
-        </ul>
-        <ul class="cart_list_td clearfix">
-            <li class="col01"><input type="checkbox" name="" checked></li>
-            <li class="col02"><img src="/static/images/goods/goods012.jpg"></li>
-            <li class="col03">奇异果<br><em>25.80元/500g</em></li>
-            <li class="col04">500g</li>
-            <li class="col05">25.80元</li>
-            <li class="col06">
-                <div class="num_add">
-                    <a href="javascript:;" class="add fl">+</a>
-                    <input type="text" class="num_show fl" value="1">
-                    <a href="javascript:;" class="minus fl">-</a>
-                </div>
-            </li>
-            <li class="col07">25.80元</li>
-            <li class="col08"><a href="javascript:;">删除</a></li>
-        </ul>
-
-        <ul class="cart_list_td clearfix">
-            <li class="col01"><input type="checkbox" name="" checked></li>
-            <li class="col02"><img src="/static/images/goods/goods003.jpg"></li>
-            <li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-            <li class="col04">500g</li>
-            <li class="col05">16.80元</li>
-            <li class="col06">
-                <div class="num_add">
-                    <a href="javascript:;" class="add fl">+</a>
-                    <input type="text" class="num_show fl" value="1">
-                    <a href="javascript:;" class="minus fl">-</a>
-                </div>
-            </li>
-            <li class="col07">16.80元</li>
-            <li class="col08"><a href="javascript:;">删除</a></li>
-        </ul>
-
-
-        <ul class="settlements">
-            <li class="col01"><input type="checkbox" name="" checked=""></li>
-            <li class="col02">全选</li>
-            <li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-            <li class="col04"><a href="place_order.html">去结算</a></li>
-        </ul>
 
     {% endblock body %}
