--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -860,5 +860,20 @@ appearance:none;
 	border: 0px;
 	font-size: 16px;
 }
+/*字段打印*/
+@keyframes typing {
+	from {
+	    width:0;
+    }
+}
+.dz{
+	margin-left: 10px;
+    width:13ch;
+	white-space:nowrap;
+	overflow:hidden;
+	animation:typing 1.5s steps(30,end),/* # of steps = # of chars */
+		 blink-caret 1.5s step-end infinite alternate;
+}
+
 
 
