--- a/ttsx_xm/templates/User/user_center_order.html
+++ b/ttsx_xm/templates/User/user_center_order.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'User/base.html' %}
 
     {% block title %}
     <title>天天生鲜-用户中心</title>
@@ -6,15 +6,7 @@
     {% block head %}{% endblock head %}
 
 {% block body %}
-
-	<div class="search_bar clearfix">
-		<a href="http://127.0.0.1:8000" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>		
-	</div>
+{{block.super}}
 
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
