--- a/ttsx_xm/templates/base.html
+++ b/ttsx_xm/templates/base.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="header_con">
 		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
+			<div class="welcome fl dz">欢迎来到天天生鲜!</div>
 			<div class="fr">
                 {% if request.session.uid %}
 				<div class="login_info fl">
