--- a/ttsx_xm/templates/Cart/cart.html
+++ b/ttsx_xm/templates/Cart/cart.html
@@ -12,6 +12,7 @@
     {#                计算价格#}
                 total1=0;
                 totals=0;
+                totals1=0;
                 $('.col07').each(function () {
 {#                    数量#}
                     count = $(this).prev().find('input').val();
@@ -20,16 +21,17 @@
     {#                   每一件的价格#}
                     total=parseInt(count)*parseFloat(price);
 {#                    赋值给价格#}
-                    $(this).text(total.toFixed(2));
-
+                    $(this).children().text(total.toFixed(2));
+                    totals+=parseInt(count);
 {#                    total = 1000;#}
                     {#                    小计#}
 {#                    if($(this).sibling(‘input[checked]’)){#}
                     var flag = $(this).parents("ul").find(".col01").find("input").prop("checked");
                     if(flag) {
+                        totals1+=1;
                         total1+=total;
-    {#                                            循环次说就等于总的商品数量#}
-                        totals+=1;
+    {#                                    循环次说就等于总的商品数量#}
+
                     }
 
 
@@ -40,7 +42,7 @@
                 $priceEm.html(total1.toFixed(2));
 {#                $priceEm.html(1000);#}
                 $(".totals").text(totals);
-
+                $(".totals1").text(totals1);
                 }
 
 {#                单件商品默认为1#}
@@ -95,7 +97,7 @@
 {#            总的勾选#}
             $('#check_all').click(function () {
                 state=$(this).prop('checked');
-                $(':checkbox:not(#check_all)').prop('checked',state)
+                $(':checkbox:not(#check_all)').prop('checked',state);
                 jisuan();
             });
 
@@ -137,7 +139,7 @@
 		</div>		
 	</div>
 
-	<div class="total_count ">全部商品<em class="totals">2</em>件</div>
+	<div class="total_count ">全部商品<em class="totals"></em>件</div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -165,7 +167,7 @@
                         <a href="javascript:;" class="minus fl">-</a>
                     </div>
                 </li>
-                <li class="col07"><em>元</em></li>
+                <li class="col07"><em></em>元</li>
                 <li class="col08"><a href="javascript:;">删除</a></li>
             </ul>
 
@@ -174,7 +176,7 @@
             <ul class="settlements">
                 <li class="col01"><input id="check_all" type="checkbox" name="" checked=""></li>
                 <li class="col02">全选</li>
-                <li class="col03">合计(不含运费)：<span>¥</span><em class="zongjine"></em><br>共计<b class="totals"></b>件商品</li>
+                <li class="col03">合计(不含运费)：<span>¥</span><em class="zongjine"></em><br>共计<b class="totals1"></b>件商品</li>
                 <li class="col04"><input type="submit" name="" value="去结算"></li>
             </ul>
         </form>
