--- a/ttsx_xm/templates/Goods/base_search.html
+++ b/ttsx_xm/templates/Goods/base_search.html
@@ -11,7 +11,7 @@
 
 		<div class="guest_cart fr">
 			<a href="/Cart/cart/" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">0</div>
+			<div class="goods_count fl" id="show_count"></div>
 		</div>
 	</div>
     <script>
@@ -19,11 +19,12 @@
        $('#show_count').text(0)
     }else {
         $.get('/Cart/count/',function (data) {
-            if ($('#show_count').text()==''||$('#show_count').text()=='0'){
-                $('#show_count').text(0)
-            }else{
-                 $('#show_count').text(data.count)
+
+            if (data.count==null){
+                data.count=0
             }
+            $('#show_count').text(data.count)
+
 
         })
     }
