--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -445,7 +445,7 @@ html,body{height:100%}
 .settlements .col03 b{color:#ff0000;font-size:14px;padding:0 5px;}
 
 .settlements .col04{width:14%;text-align:center;float:right;margin:0px;background-color:#ff3d3d;}
-.settlements .col04 input{margin:auto;border:none;display:block;height:78px;text-align:center;line-height:78px;background-color:#ff3d3d;color:#fff;font-size:24px}
+.settlements .col04 input{cursor:pointer;width:100%;margin:auto;border:none;display:block;height:78px;text-align:center;line-height:78px;background-color:#ff3d3d;color:#fff;font-size:24px}
 
 
 .common_title{width:1200px;margin:20px auto 0;font-size:14px;}
@@ -498,7 +498,7 @@ html,body{height:100%}
 .total_goods_count em,.total_goods_count b,.transit b,.total_pay b{font-size:14px;color:#ff4200;padding:0 5px;}
 
 .order_submit{width:1200px;margin:20px auto;}
-.order_submit #order_btn{width:160px;height:40px;line-height:40px;text-align:center;background-color:#47aa34;color:#fff;font-size:16px;display:block;float:right;
+.order_submit #order_btn{cursor:pointer;width:160px;height:40px;line-height:40px;text-align:center;background-color:#47aa34;color:#fff;font-size:16px;display:block;float:right;
 	border:0;}
 
 
